testsuite/tests/deSugar/should_fail/DsStrictFail.hs
{-# LANGUAGE Strict #-}
module Main where

main = let False = True
       in return ()
